--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <div class="container">
-            <h1>GIT</h1>
+            <h1>GIT Main</h1>
         </div>
     </div>
 </body>
